--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+# compiled
+utils/reload/*.js
+utils/reload/injections/*.js
+public/manifest.json
